name:                ifscs
version:             0.1.0.0
synopsis:            An inductive-form set constraint solver
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          travitch@cs.wisc.edu
category:            Constraints
build-type:          Simple
cabal-version:       >=1.10
-- description:

library
  default-language: Haskell2010
  exposed-modules: Constraints.Set.Solver
  build-depends: base == 4.*, failure, mtl > 2, containers,
                 hbgl, persistent-vector
  hs-source-dirs: src
  ghc-options: -Wall

test-suite ConstraintTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: ConstraintTests.hs
  build-depends: ifscs, base,
                 test-framework, test-framework-hunit, HUnit
  ghc-options: -Wall
